# rusty-games

./: .travis.yml  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.githooks/: pre-commit
.github/workflows/: build.yml
examples/: guess_game_custom_ai.rs  guess_game_easy.rs  guess_game_hard.rs  guess_game_human.rs
examples/guess_game/: guess_game_custom_ai.rs  guess_game_hard.rs
examples/total_sum/: human.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
puzzle_games/: all.html  index.html  sidebar-items.js
puzzle_games/engine/: fn.start.html  index.html  sidebar-items.js
puzzle_games/game/: enum.Level.html  index.html  sidebar-items.js  struct.Game.html
puzzle_games/guess_game/: index.html  sidebar-items.js
puzzle_games/guess_game/board/: index.html  sidebar-items.js  struct.BoardResponse.html  struct.GuessingGameBoard.html
puzzle_games/guess_game/players/: fn.get_computer_players.html  fn.get_human_players.html  index.html  sidebar-items.js
puzzle_games/total_sum/: index.html  sidebar-items.js
puzzle_games/traits/: index.html  sidebar-items.js
src/: engine.rs  game.rs  guess_game.rs  guess_game_board.rs  guessing_game.rs  lib.rs  main.rs  total_sum.rs  traits.rs
src/guess_game/: board.rs  game.rs  players.rs
src/puzzle_games/: engine.rs.html  game.rs.html  guess_game.rs.html  lib.rs.html  total_sum.rs.html  traits.rs.html
src/spoof/: board.rs
src/total_sum/: board.rs  game.rs  players.rs
(+41 files in other folders)
